@@ -1,5 +1,13 @@
 2004-03-09  Daniel Jacobowitz  <drow@mvista.com>
 
+	* user-regs.c: Update copyright years.
+	(struct user_regs): Rename to gdb_user_regs.
+	(append_user_reg, builtin_user_regs, user_regs_init)
+	(user_reg_add, user_reg_map_name_to_regnum)
+	(usernum_to_user_reg): Update.
+
+2004-03-09  Daniel Jacobowitz  <drow@mvista.com>
+
 	* dwarf2read.c (skip_leb128, peek_die_abbrev, skip_one_die)
 	(skip_children): New functions.
 	(locate_pdi_sibling): Call skip_children.
